--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,9 +12,12 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-slick": "^0.23.4",
+    "firebase": "^8.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^5.2.0",
