--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-slick": "^0.23.4",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/showdown": "^1.9.3",
     "firebase": "^8.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -20,8 +22,11 @@
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.1.0",
     "react-id-swiper": "^4.0.0",
+    "react-markdown": "^5.0.3",
+    "react-mde": "^11.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "remark-gfm": "^1.0.0",
     "swiper": "^6.4.5",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
